--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Cubreacov/ola-express-dc/issues"
   },
-  "homepage": "https://github.com/Cubreacov/ola-express-dc#readme"
+  "homepage": "https://github.com/Cubreacov/ola-express-dc#readme",
+  "dependencies": {
+    "express": "^4.17.3"
+  }
 }
